@@ -1,3 +1,7 @@
+2006-04-08  David Reveman  <davidr@novell.com>
+
+	* plugins/water.c: Add rain delay option. (Emilie Roberts)
+
 2006-04-07  David Reveman  <davidr@novell.com>
 
 	* plugins/gconf-dump.c: Dump list options correctly.
